--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -1,14 +1,14 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 # Test
- 
+
 on:
   push:
     paths:
       - 'preprocessing/automated_Agus_Prasetyo.py'
       - 'preprocessing/final_dataset/**'
       - 'requirements.txt'
-
+  workflow_dispatch: 
 jobs:
   preprocess:
     runs-on: ubuntu-latest
