--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -1,6 +1,5 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-# Test
 
 on:
   push:
@@ -8,7 +7,8 @@ on:
       - 'preprocessing/automated_Agus_Prasetyo.py'
       - 'preprocessing/final_dataset/**'
       - 'requirements.txt'
-  workflow_dispatch: 
+  workflow_dispatch:  # Untuk menjalankan manual via GitHub UI
+
 jobs:
   preprocess:
     runs-on: ubuntu-latest
@@ -27,8 +27,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run automated_Agus_Prasetyo.py
-        run: python automated_Agus_Prasetyo.py
+      - name: Run automated preprocessing script
+        run: python preprocessing/automated_Agus_Prasetyo.py
 
       - name: Show output folder content
-        run: ls -lh final_dataset/
+        run: ls -lh preprocessing/final_dataset/
